[package]
name = "argo-helm-updater"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
chrono = { version = "0.4.38", default-features = false, features = ["serde"]}
clap = { version = "4.5.9", features = ["derive"] }
env_logger = "0.11.3"
hyper = "1.4.1"
hyper-util = { version = "0.1.6", features = ["client-legacy"] }
inquire = "0.7.5"
k8s-openapi = { version = "0.22.0", features = ["v1_28"] }
kube = { version = "0.91.0", default-features = false, features = ["derive", "client", "openssl-tls"] }
kube-derive = "0.91.0"
log = "0.4.22"
mockall = "0.12.1"
mockito = "1.4.0"
reqwest = "0.12.5"
schemars = { version = "0.8.21", features = ["derive_json_schema"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
tokio = { version = "1.38.1", features = ["full"] }
tower = "0.4.13"
tower-http = "0.5.2"
versions = "6.3.0"
