[package]
name = "argo-helm-updater"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
chrono = { version = "0.4.38", default-features = false, features = ["serde"]}
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
hyper = "1.5.0"
hyper-util = { version = "0.1.10", features = ["client-legacy"] }
inquire = "0.7.5"
k8s-openapi = { version = "0.23.0", features = ["v1_31"] }
kube = { version = "0.96.0", default-features = false, features = ["derive", "client", "openssl-tls"] }
kube-derive = "0.96.0"
log = "0.4.22"
mockall = "0.13.0"
mockito = "1.6.1"
reqwest = "0.12.9"
schemars = { version = "0.8.21", features = ["derive_json_schema"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
tokio = { version = "1.41.1", features = ["full"] }
tower = "0.5.1"
tower-http = "0.6.1"
versions = "6.3.2"
