[package]
name = "argo-helm-updater"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
chrono = { version = "0.4.40", default-features = false, features = ["serde"]}
clap = { version = "4.5.37", features = ["derive"] }
env_logger = "0.11.8"
hyper = "1.6.0"
hyper-util = { version = "0.1.11", features = ["client-legacy"] }
inquire = "0.7.5"
k8s-openapi = { version = "0.24.0", features = ["v1_31"] }
kube = { version = "0.99.0", default-features = false, features = ["derive", "client", "openssl-tls"] }
kube-derive = "0.99.0"
log = "0.4.27"
mockall = "0.13.1"
mockito = "1.7.0"
reqwest = "0.12.15"
schemars = { version = "0.8.22", features = ["derive_json_schema"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tower-http = "0.6.2"
versions = "7.0.0"
